Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-2039

web UI /tables listing doesn't match total count

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 1.4.0
    • 1.5.0
    • master

    Description

      Looks like /tables calculates the total table count by considering all tables (including deleted ones), while the table listing filters out deleted tables.

      Attachments

        Activity

          People

            abhishektalluri@cloudera.com Abhishek Talluri
            adar Adar Dembo
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: