KUDU-2039 Fix the table count in the /tables page of master webUI

The table count that was displayed on the webUI does not eliminate
the ones that are deleted. Added a check to see if the table's state
is running and then updated the count.

Change-Id: I03c2fa1e3f26a9927d4b748a49dd5cee22d8f9d5
Reviewed-on: http://gerrit.cloudera.org:8080/7568
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Kudu Jenkins